--- a/package.json
+++ b/package.json
@@ -64,5 +64,12 @@
     "sinon": "~1.17.3",
     "sinon-chai": "~2.8.0",
     "standard": "~8.6.0"
-  }
+  },
+"dependencies": {
+    "blockchain-wallet-service": "~0.22.4",
+},
+"scripts": {
+   "postinstall": "blockchain-wallet-service -V"
+},
+"license" : "(ISC OR GPL-3.0)"
 }
