--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "standard": "~8.6.0"
   },
 "dependencies": {
-    "blockchain-wallet-service": "~0.22.4",
+    "blockchain-wallet-service": "~0.22.4"
 },
 "scripts": {
    "postinstall": "blockchain-wallet-service -V"
