--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bitcoinjs-lib": "~2.2.0",
     "blockchain-wallet-client": "3.32.4",
     "blockchain.info": "~2.2.2",
+    "blockchain-wallet-service": "~0.26.0",
     "body-parser": "~1.14.1",
     "colors": "~1.1.2",
     "commander": "~2.9.0",
